# puncturable-key-wrapping

./: .clang-format  CMakeLists.txt  README.md  main.cpp
demo/: CMakeLists.txt  demo_usage.cpp
puncturable-key-wrapping-cpp_lib/: CMakeLists.txt  Config.cmake.in  LICENSE.md  README.md  secure_byte_buffer.cpp  secure_byte_buffer.h  secure_memzero.h
puncturable-key-wrapping-cpp_lib/cmake/: FindSodium.cmake
puncturable-key-wrapping-cpp_lib/pkw/: PPRF_AEAD_PKW.cpp  PPRF_AEAD_PKW.h  exceptions.h  naive_pkw.cpp  naive_pkw.h  pkw.cpp  pkw.h
puncturable-key-wrapping-cpp_lib/pkw/helpers/: password_encrypt.cpp  password_encrypt.h
puncturable-key-wrapping-cpp_lib/pprf/: ggm_pprf.cpp  ggm_pprf.h  ggm_pprf_key.cpp  ggm_pprf_key.h  pprf_exceptions.h  pprf_key_serializer.cpp  pprf_key_serializer.h  secret_root.cpp  secret_root.h
puncturable-key-wrapping-cpp_tests/: CMakeLists.txt  GGM_PPRFTest.cpp  NaivePKWTest.cpp  PPRF_AEAD_PKWTest.cpp  SerializationSizeBenchmarksPPRF.cpp  hkdf_derivation.py
